--- a/style1.css
+++ b/style1.css
@@ -23,7 +23,8 @@ body {
   background-color: white;
   border-radius: 20px;
   overflow: hidden;
-  text-align: center; }
+  text-align: center;
+padding-top:3%}
 
 .content {
   padding: 7%; }
