--- a/style.scss
+++ b/style.scss
@@ -24,7 +24,7 @@ body {
 	border-radius: 20px;
 	overflow: hidden;
 	text-align: center;
-	padding-top:3%;
+	margin-top:3%;
 }
 .content {
 	padding: 7%;
