--- a/style1.css
+++ b/style1.css
@@ -24,7 +24,7 @@ body {
   border-radius: 20px;
   overflow: hidden;
   text-align: center;
-padding-top:3%}
+margin-top:5%}
 
 .content {
   padding: 7%; }
