--- a/style.scss
+++ b/style.scss
@@ -6,7 +6,7 @@
 }
 body {
 	font-family: 'Red Hat Display', sans-serif;
-	min-height: 100vh;
+	min-height: 100%;
 	background-image: url("images/pattern-background-desktop.svg");
 	background-repeat: no-repeat;
 	background-size: contain;
