--- a/style1.css
+++ b/style1.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Red Hat Display', sans-serif;
-  min-height: 100%;
+  min-height: 100vh;
   background-image: url("images/pattern-background-desktop.svg");
   background-repeat: no-repeat;
   background-size: contain;
