--- a/style1.css
+++ b/style1.css
@@ -91,6 +91,11 @@ body {
   body {
     background-image: url("images/pattern-background-mobile.svg");
     font-size: 14px; }
+  * {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  overflow-y:hidden;}
 
   .container {
     margin-top: 0px;
