--- a/style.scss
+++ b/style.scss
@@ -97,6 +97,9 @@ body {
 	}
 }
 @media only screen and (max-width: 425px) {
+	*{
+	overflow-y:hidden;
+	}
 	body {
 		background-image: url("images/pattern-background-mobile.svg");
 		font-size: 14px;
