--- a/style1.css
+++ b/style1.css
@@ -88,6 +88,10 @@ margin-top: 5px; }
     color: #1f2f56; }
 
 @media only screen and (max-width: 425px) {
+  
+  *{
+  overflow-y:hidden;
+  }
   body {
     background-image: url("images/pattern-background-mobile.svg");
     font-size: 14px; }
